# friction-log

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: test.yml
spec/: 2026-05-09-initial-build.md
spec/2026-05-10-paste-driven-fl-note.md/: paste-driven-fl-note.md
src/fl/: archive.py  cli.py  doc.py  note.py  session.py  storage.py  ui.py  view.py
tests/: conftest.py  test_archive.py  test_doc.py  test_ls.py  test_note.py  test_recording.py  test_status.py  test_storage.py  test_view.py
tests/fakes/: claude  editor
