[project]
name = "fl"
version = "0.1.0"
description = "friction log: record terminal sessions, annotate, summarize via Claude Code"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "questionary>=2.0",
]

[project.scripts]
fl-py = "fl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fl"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "needs_script: requires a working script(1) on PATH",
]
